# BabylonPolymorph

./: .gitmodules  CONTRIBUTING.md  LICENSE.md  README.md
Morphs/Importers/: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  Root.props  RootPaths.props  cgmanifest.json
Morphs/Importers/Apps/: .gitignore  CMakeLists.txt
Morphs/Importers/Apps/Transcode.CPP/: CMakeLists.txt
Morphs/Importers/Apps/Transcode.CPP/Source/: Transcode.cpp  Transcode.h  main.cpp
Morphs/Importers/CoreUtils/: .gitignore
Morphs/Importers/CoreUtils/Shared/CoreUtils.Shared.CPP/: CoreUtils.Shared.CPP.vcxitems  CoreUtils.Shared.CPP.vcxitems.filters
Morphs/Importers/CoreUtils/Shared/DAESDK/: ColladaPath.props  DAESDK.vcxproj  DAESDK.vcxproj.projimport
Morphs/Importers/CoreUtils/Shared/DAESDK.Shared.CPP/COLLADABaseUtils/: COLLADABaseUtils.Shared.CPP.vcxitems  COLLADABaseUtils.Shared.CPP.vcxitems.filters
Morphs/Importers/CoreUtils/Shared/DAESDK.Shared.CPP/COLLADAFramework/: COLLADAFramework.Shared.CPP.vcxitems  COLLADAFramework.Shared.CPP.vcxitems.filters
Morphs/Importers/CoreUtils/Shared/DAESDK.Shared.CPP/COLLADASaxFrameworkLoader/: DAESDK.Shared.CPP.vcxitems  DAESDK.Shared.CPP.vcxitems.filters
Morphs/Importers/CoreUtils/Shared/DAESDK.Shared.CPP/GeneratedSaxParser/: GeneratedSaxParser.Shared.CPP.vcxitems  GeneratedSaxParser.Shared.CPP.vcxitems.filters
Morphs/Importers/CoreUtils/Shared/DAESDK/COLLADABaseUtils/: .gitignore  COLLADABaseUtils.vcxproj
Morphs/Importers/CoreUtils/Shared/DAESDK/COLLADAFramework/: COLLADAFramework.vcxproj
Morphs/Importers/CoreUtils/Shared/DAESDK/GeneratedSaxParser/: GeneratedSaxParser.vcxproj
Morphs/Importers/CoreUtils/Shared/Framework/: .gitignore
Morphs/Importers/CoreUtils/Shared/GLTFSDK/cpp/: .gitignore  GenerateSchemaJsonHeader.ps1
Morphs/Importers/CoreUtils/Shared/JTSDK/cpp/: JTSDK.vcxproj  JTSDK.vcxproj.filters  JTSDKPath.props
Morphs/Importers/Dependencies/DirectXTex/: CMakeDirectXTexBuild.txt  CMakeDirectXTexDownload.txt.in  CMakeLists.txt
Morphs/Importers/Dependencies/GLTFSDK/: CMakeGLTFSDKDownload.txt.in  CMakeLists.txt
Morphs/Importers/Dependencies/RapidJSON/: CMakeLists.txt  CMakeRapidJSONDownload.txt.in
Morphs/Importers/Dependencies/SketchUpAPI-Windows/: FindSKPSDK.Windows.cmake
Morphs/Importers/Transcoders/: .gitignore  CMakeLists.txt
Morphs/Importers/Transcoders/PluginSDK/: CMakeLists.txt
Morphs/Importers/Transcoders/PluginSDK/Include/PluginSDK/: FileParserBase.h  FractionalProgressCallback.h  IConverter.h  IExporter.h  IParser.h  IResourceServer.h  ITranscoderBuffer.h  ResourceServer.h  ResourceServerException.h  TokenParser.h  TranscoderTextStream.h  UpdateReporter.h
Morphs/Importers/Transcoders/PluginSDK/Source/: FileParserBase.cpp  PluginSDKPch.cpp  PluginSDKPch.h  TokenParser.cpp  TranscoderTextStream.cpp
Morphs/Importers/Transcoders/Shared/Transcoders/Inc/: TranscoderException.h  Transcoders.h
Morphs/Importers/Transcoders/Shared/Transcoders/Source/: MemoryStream.h  TranscoderException.cpp  Transcoders.cpp  TranscodersPch.h  TranscodersTelemetryHelper.cpp  TranscodersTelemetryHelper.h  TranscodersV2Json.cpp
Morphs/Importers/Transcoders/Transcoders/: CMakeLists.txt
Morphs/Importers/Transcoders/Transcoders/Include/: TranscoderException.h  Transcoders.h
Morphs/Importers/Transcoders/Transcoders/Include/ExporterGLTF/: Asset3DToGLTFConverter.h  ExporterGLB.h  ExporterGLTF.h  ExtensionsMSFT.h  GLTFExportOptions.h
Morphs/Importers/Transcoders/Transcoders/Include/ExporterOBJ/: ExporterObj.h
Morphs/Importers/Transcoders/Transcoders/Include/ExporterSTL/: ExporterAsciiStl.h
Morphs/Importers/Transcoders/Transcoders/Include/ExporterTexture/: ExporterTexture.h
Morphs/Importers/Transcoders/Transcoders/Include/PluginSKP/: PluginSKP.h
Morphs/Importers/Transcoders/Transcoders/Include/TranscoderGLTF/: GLTFImportOptions.h  GLTFToAsset3DConverter.h  IStreamReaderRSAdapter.h  IStreamWriterOSFAdapter.h  ImporterGLB.h  ImporterGLTF.h  StringUtils.h  TranscoderGLB.h  TranscoderGLTF.h  TransformMatrixUtils.h
Morphs/Importers/Transcoders/Transcoders/Include/TranscoderOBJ/: GeometryLineType.h  MaterialParser.h  MtlLineType.h  MtlTextureMapOptions.h
Morphs/Importers/Transcoders/Transcoders/Include/TranscoderPLY/: TranscoderPLY.h
Morphs/Importers/Transcoders/Transcoders/Include/TranscoderSTL/: StlBinaryParser.h  TranscoderSTL.h
Morphs/Importers/Transcoders/Transcoders/Source/: TranscoderException.cpp  Transcoders.cpp  TranscodersPch.cpp  TranscodersPch.h  TranscodersTelemetryHelper.cpp  TranscodersTelemetryHelper.h  TranscodersV2Json.cpp
Morphs/Importers/Transcoders/Transcoders/Source/ExporterGLTF/: ExporterGLB.cpp  (+2 more)
Morphs/Importers/Utils/: CMakeLists.txt
Morphs/Importers/Utils/Asset3D/: CMakeLists.txt
Morphs/Importers/Utils/Asset3D/Source/: Asset3DPch.h  Asset3DTraverser.cpp  BoundingBox.cpp  Geometry.cpp  ITraversableBase.cpp  MaterialConversionUtils.cpp  MaterialDescriptor.cpp  Mesh.cpp  SceneNode.cpp  TextureDescriptor.cpp  TexturePackingUtils.cpp
Morphs/Importers/Utils/CanvasTex/: CMakeLists.txt
Morphs/Importers/Utils/CanvasTex/Source/: CanvasTexUtils.h
Morphs/Importers/Utils/CoreUtils/: CMakeLists.txt
Morphs/Importers/Utils/CoreUtils/Source/: Assert.cpp  CRC64.cpp  Cancellation.cpp  ConfigurationManagerBase.cpp  ConfigurationManagerJson.cpp  ConfigurationValue.cpp  GLTFSkins.cpp  Gltf.cpp  IO.cpp  LexicalCast.cpp  PlatformLogger.h  SimpleMath.cpp  SmartThrow.cpp  StringUtils.cpp  TelemetryManager.cpp  ThreadHelpers.cpp  ThreadPool.cpp  Trace.cpp  Tracked.cpp  Version.cpp
Morphs/Importers/Utils/Framework/: CMakeLists.txt
Morphs/Importers/Utils/Framework/Source/: Async.cpp  FormatWriterUtils.cpp  GeometryUtils.cpp  GeometryWriter.cpp  ManifestParser.cpp  MaterialWriter.cpp  MeshMaker.cpp  MetadataWriter.cpp  PerformanceTraceLogging.cpp  SceneWriter.cpp  TelemetryTraceDualLogger.cpp  TelemetryTraceLoggerJson.cpp
Morphs/Importers/Utils/ImagingComponent/: CMakeLists.txt
Morphs/Importers/Utils/ImagingComponent/Source/: Common.cpp  Detection.cpp  Processing.cpp  SpriteSheet.cpp
(+706 files in other folders)
